welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value Tableau
  Tableau=chopperCouleur()
  ^Array1:6: error: not found: value Tableau
    reprodCouleur(Tableau)
                  ^Array1:27: error: type mismatch;
 found   : java.awt.Color
 required: Int
    T(i)=getCouleurSol()
      ^Array1:30: warning: enclosing method chopperCouleur has result type Unit: return value discarded
 return T
 ^