welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  Tableau=chopperCouleur()
  decale()
  for (i <- 1 to 4){
    reprodCouleur(Tableau)
    decale()
  }
}


// Reproduit les couleurs en fonction du tableau.
def reprodCouleur(T:Array[Color]){
  for (i<- 0 to getMondeHauteur()-1){
    setCouleurBrosse(T(i))
    marque()
    avance()
  }  
}


// parcours la premiere ligne, r?cup?re les couleurs et renvoie le tableau
def chopperCouleur(){
  var y=getMondeHauteur()
  var T = new Array[Color](y)
  for (i<- T){
    T(i)=getCouleurSol()
    avance()
  }  
 return T
}


// decale d'une rang?e
def decale(){
  gauche()
  avance()
  droite()
  avance()
}


// tamponne la case
def marque(){
  baisseBrosse()
  leveBrosse()
}